<resources>
    <string name="app_name">MyKotlinApp</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_home_page">Welcome to the Home Page!</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="mes_reservation">Mes Reservation</string>
    <string name="mes_r_servations">Mes Réservations</string>
    <string name="recherche" />
    <string name="messages" />
    <string name="reservation_name">Reservation Name</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="conditions_de_l_tablissement">Conditions de l\'établissement</string>
    <string name="obtenir_l_itin_raire">Obtenir l\'itinéraire</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="first_name">First-name</string>
</resources>