<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/navigation_reservations"
        android:icon="@drawable/ic_reservations"
        android:title="@string/title_reservations" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>
